--- a/honk.html
+++ b/honk.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta property="og:title" content="P4WN3D" />
         <meta property="og:description" content="HonkSec is honking at your base!!" />
+        <meta property="og:image" content="https://i.ibb.co/pBK8mfbk/HonkSec.png" />
         <script>
             let text = "HonkSec is here.";
             let i = 0;
@@ -95,7 +96,6 @@
                 color: black;
                 z-index: 3;
                 position: relative;
-                white-space: nowrap;
             }
 
             .quote {
@@ -133,7 +133,7 @@
             <div class="member">
                 We are HonkSec
                 <p>
-                    Xp0rm4n - Kuneh0 - R3p0lyo
+                    Xp0rm4n - Kuneh0 - R3p0lyo - XShadow - ShadowX - Smurfy - Smurfy
                 </p>
             </div>
             <div class="quote">
