--- a/honk.html
+++ b/honk.html
@@ -133,7 +133,7 @@
             <div class="member">
                 We are HonkSec
                 <p>
-                    Xp0rm4n - Kuneh0 - R3p0lyo - XShadow - ShadowX - Smurfy - Smurfy
+                    Xp0rm4n - Kuneh0 - R3p0lyo - XShadow - ShadowX - Smurfy
                 </p>
             </div>
             <div class="quote">
