--- a/honk.html
+++ b/honk.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta property="og:title" content="P4WN3D" />
         <meta property="og:description" content="HonkSec is honking at your base!!" />
-        <meta property="og:image" content="https://i.ibb.co/pBK8mfbk/HonkSec.png" />
+        <meta property="og:image" content="https://i.ibb.co/YFqngvtq/honktheplanet.png" />
         <script>
             let text = "HonkSec is here.";
             let i = 0;
