--- a/honk.html
+++ b/honk.html
@@ -133,7 +133,7 @@
             <div class="member">
                 We are HonkSec
                 <p>
-                    Xp0rm4n - Kuneh0 - R3p0lyo - XShadow - ShadowX - Smurfy
+                    Xp0rm4n - Kuneh0 - R3p0lyo - XShadow - ShadowX - Smurfy - 3L3V4T0R - Zapster
                 </p>
             </div>
             <div class="quote">
@@ -146,10 +146,5 @@
                 </p>
             </div>
         </div>
-        <script>
-            window.onload = function() {
-            document.body.style.display = "block";
-            };
-        </script>
     </body>
 </html>
