Update member list in honk.html

--- a/honk.html
+++ b/honk.html
@@ -141,7 +141,7 @@
         <div class="member">
             We are HonkSec
             <p>
-                Xp0rm4n - Kuneh0 - 4steroth - XShadow - ShadowX - Smurfy - 3L3V4T0R - Zapster
+                Archie?? - Astra - 4steroth - XShadow - ShadowX - Smurfy - 3L3V4T0R - Zapster
             </p>
         </div>
         <div class="quote">
