Remove alt attribute from image tag

--- a/honksec.html
+++ b/honksec.html
@@ -105,7 +105,7 @@
 <body>
     <div class="center-header">
         <div class="img-container">
-            <img class="img" src="https://i.ibb.co/PZxwHXrP/HonkSec.jpg" alt="HonkSec" oncontextmenu="return false;">
+            <img class="img" src="https://i.ibb.co/PZxwHXrP/HonkSec.jpg" oncontextmenu="return false;">
         </div>
         <div class="header">Hacked by <span>4steroth</span></div>
         <div class="greets">
