--- a/honksec.html
+++ b/honksec.html
@@ -34,7 +34,7 @@
         body {
             margin: 0;
             height: 100vh;
-            overflow: hidden;
+            overflow: auto;
             background-color: white;
         }
         .center-header {
@@ -120,10 +120,10 @@
         <div class="quote">
             <span>“Honking at your security, leaving a trail of pure chaos for the lulz.”</span>
         </div>
+        <a href="https://facebook.com/HonkSec" class="link">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg" alt="Facebook" style="width:24px; height:24px; vertical-align:middle; margin-right:8px; position: relative;">
+            Follow us on Facebook
+        </a>
     </div>
-    <a href="https://facebook.com/HonkSec" class="link">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg" alt="Facebook" style="width:24px; height:24px; vertical-align:middle; margin-right:8px; position: relative;">
-        Follow us on Facebook
-    </a>
 </body>
 </html>
