Add Facebook icon styling to honksec.html

--- a/honksec.html
+++ b/honksec.html
@@ -98,6 +98,13 @@
             text-decoration:none;
             color: blue;
         }
+        .facebook {
+            width: 24px; 
+            height: 24px; 
+            vertical-align: middle; 
+            margin-right: 8px; 
+            position: relative;
+        }
     </style>
 </head>
 
@@ -121,7 +128,7 @@
             <span>“Honking at your security, leaving a trail of pure chaos for the lulz.”</span>
         </div>
         <a href="https://facebook.com/HonkSec" class="link">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg" alt="Facebook" style="width:24px; height:24px; vertical-align:middle; margin-right:8px; position: relative;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg" class="facebook">
             Follow us on Facebook
         </a>
     </div>
