--- a/honksec.html
+++ b/honksec.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="HonkSec" />
     <meta property="og:description" content="HonkSec is honking at your base!!" />
-    <meta property="og:image" content="https://i.ibb.co/gbqFn5nf/Meta-Honk-Sec.png" />
+    <meta property="og:image" content="https://i.ibb.co/YFqngvtq/honktheplanet.png" />
 
     <!-- Typewriter Effect on Document Title -->
     <script>
@@ -34,7 +34,7 @@
         body {
             margin: 0;
             height: 100vh;
-            overflow: auto;
+            overflow: hidden;
             background-color: white;
         }
         .center-header {
@@ -93,6 +93,18 @@
             color: red;
             white-space: nowrap;
         }
+        .link {
+            font-family: 'Orbitron', sans-serif;
+            text-decoration:none;
+            color: blue;
+        }
+        .facebook {
+            width: 24px;
+            height: 24px;
+            vertical-align: middle;
+            margin-right: 8px;
+            position: relative;
+        }
     </style>
 </head>
 
@@ -100,7 +112,7 @@
 <body>
     <div class="center-header">
         <div class="img-container">
-            <img class="img" src="https://i.ibb.co/PZxwHXrP/HonkSec.jpg" oncontextmenu="return false;">
+            <img class="img" src="https://i.ibb.co/PZxwHXrP/HonkSec.jpg" alt="HonkSec" oncontextmenu="return false;">
         </div>
         <div class="header">Hacked by <span>4steroth</span></div>
         <div class="greets">
@@ -115,6 +127,10 @@
         <div class="quote">
             <span>“Honking at your security, leaving a trail of pure chaos for the lulz.”</span>
         </div>
+        <a href="https://facebook.com/HonkSec" class="link">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg" class="facebook">
+            Follow us on Facebook
+        </a>
     </div>
 </body>
 </html>
