--- a/honksec.html
+++ b/honksec.html
@@ -34,7 +34,7 @@
         body {
             margin: 0;
             height: 100vh;
-            overflow: hidden;
+            overflow: auto;
             background-color: white;
         }
         .center-header {
@@ -62,14 +62,14 @@
             overflow: hidden;
             object-fit: cover;
             object-position: center top;
-            height: 600px;
-            max-height: 480x;
+            height: 590px;
+            max-height: 470x;
         }
         .header {
             font-family: "Orbitron", sans-serif;
             font-weight: 400;
             font-size: 30px;
-            margin-top: -45%;
+            margin-top: -38%;
             color: black;
             white-space: nowrap;
         }
@@ -79,13 +79,13 @@
         .greets {
             font-family: "Courier Prime", sans-serif;
             font-size: 16px;
-            font-weight: 400;
+            font-weight: bold;
             margin-top: 0;
             color: black;
             white-space: nowrap;
         }
         .quote {
-            margin-top: 5%;
+            margin-top: 3%;
             margin-bottom: 5%;
             font-family: "Michroma", sans-serif;
             font-size: 14px;
@@ -118,7 +118,7 @@
         <div class="greets">
             <p>We are HonkSec!</p>
             <p>
-                Xp0rm4n - Astra - 4steroth - XShadow - ShadowX - Smurfy - 3L3V4T0R - Zapster
+                Xp0rm4n - Astra - 4steroth - XShadow - ShadowX - Smurfy - 3L3V4T0R - Zapster - Xmadara
             </p>
             <p>
                 Pinoy Lulzsec - Pinoy Clownsec - Pinoy Hulksec
