Update metadata and team member names in HTML

--- a/honksec.html
+++ b/honksec.html
@@ -5,9 +5,9 @@
 
         <!-- Html Metadata -->
         <meta charset="UTF-8">
-        <meta property="og:title" content="HonkSec" />
+        <meta property="og:title" content="P4WN3D BY HONKSEC!" />
         <meta property="og:description" content="HonkSec is honking at your base!!" />
-        <meta property="og:image" content="https://i.ibb.co/YFqngvtq/honktheplanet.png" />
+        <meta property="og:image" content="https://i.ibb.co/gbqFn5nf/Meta-Honk-Sec.png" />
 
         <!-- Typewriter Effect on Document Title -->
         <script>
@@ -102,7 +102,7 @@
         <div class="greets">
             <p>We are HonkSec!</p>
             <p>
-                | Xp0rm4n | Astra | 4steroth | XShadow | ShadowX | Smurfy | 3L3V4T0R | Zapster | Ph.d4rkh4x |
+                | Xp0rm4n | Astra | 4steroth | XShadow | ShadowX | Smurfy | 3L3V4T0R | Zapster | Xmadara |
             </p>
             <p>
                 | Pinoy Lulzsec | Pinoy Clownsec | Pinoy Hulksec |
