--- a/honksec.html
+++ b/honksec.html
@@ -111,7 +111,7 @@
         <div class="quote">
             <span>“Honking at your security, leaving a trail of pure chaos for the lulz.”</span>
         </div>
-        <a href="https://facebook.com/HonkSec" class="link">
+        <a href="https://facebook.com/HonkSecurity" class="link">
             <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg" class="facebook">
             Follow us on Facebook
         </a>
