Update image source in honksec.html

--- a/honksec.html
+++ b/honksec.html
@@ -97,7 +97,7 @@
 
     <!-- Body -->
     <body>
-        <img src="https://i.ibb.co/PZxwHXrP/HonkSec.jpg" oncontextmenu="return false;">
+        <img src="https://i.ibb.co/mCSCxN01/Honk-Sec-Banner.png" oncontextmenu="return false;">
         <div class="header">Hacked by <span>4steroth</span></div>
         <div class="greets">
             <p>We are HonkSec!</p>
